# rust-ml-examples

./: .gitignore  LICENSE  README.md
based/: Cargo.toml  README.md
based/src/: main.rs
beit/: Cargo.toml  README.md
beit/src/: main.rs
bert/: Cargo.toml  README.md
bert/src/: main.rs
bigcode/: Cargo.toml  README.md
bigcode/src/: main.rs
blip/: Cargo.toml  README.md
blip/src/: main.rs
chatglm/: Cargo.toml  README.md
chatglm/src/: main.rs
chinese_clip/: Cargo.toml  README.md
chinese_clip/src/: main.rs
clip/: Cargo.toml  README.md
clip/src/: main.rs
codegeex4-9b/: Cargo.toml  README.md
codegeex4-9b/src/: main.rs
colpali/: Cargo.toml  README.md
colpali/src/: main.rs
convmixer/: Cargo.toml  README.md
convmixer/src/: main.rs
convnext/: Cargo.toml  README.md
convnext/src/: main.rs
csm/: Cargo.toml  README.md
csm/src/: main.rs
custom-ops/: Cargo.toml  README.md
custom-ops/src/: build.rs  main.rs
debertav2/: Cargo.toml  README.md
debertav2/src/: main.rs
deepseekv2/: Cargo.toml  README.md
deepseekv2/src/: main.rs
depth_anything_v2/: Cargo.toml  README.md
depth_anything_v2/src/: color_map.rs  main.rs
dinov2/: Cargo.toml  README.md
dinov2/src/: main.rs
dinov2reg4/: Cargo.toml  README.md
dinov2reg4/src/: main.rs
distilbert/: Cargo.toml  README.md
distilbert/src/: main.rs
efficientnet/: Cargo.toml  README.md
efficientnet/src/: main.rs
efficientvit/: Cargo.toml  README.md
efficientvit/src/: main.rs
encodec/: Cargo.toml  README.md
encodec/src/: main.rs
eva2/: Cargo.toml  README.md
eva2/src/: main.rs
falcon/: Cargo.toml  README.md
falcon/src/: main.rs
fastvit/: Cargo.toml  README.md
fastvit/src/: main.rs
flux/: Cargo.toml  README.md
flux/src/: main.rs
gemma/: Cargo.toml  README.md
gemma/src/: main.rs
granite/: Cargo.toml  README.md
granite/src/: main.rs
gte-qwen/: Cargo.toml  README.md
gte-qwen/src/: main.rs
helium/: Cargo.toml  README.md
helium/src/: main.rs
hiera/: Cargo.toml  README.md
hiera/src/: main.rs
jina-bert/: Cargo.toml  README.md
jina-bert/src/: main.rs
llama/: Cargo.toml  README.md
llama/src/: main.rs
llama2-c/: Cargo.toml  README.md
llama2-c/src/: main.rs  training.rs
llava/: Cargo.toml  README.md
llava/src/: image_processor.rs  main.rs
mamba/: Cargo.toml  README.md
mamba-minimal/: Cargo.toml  README.md
mamba-minimal/src/: main.rs  model.rs
mamba/src/: main.rs
marian-mt/: Cargo.toml  README.md
marian-mt/src/: main.rs
metavoice/: Cargo.toml  README.md
metavoice/src/: main.rs
mimi/: Cargo.toml  README.md
mimi/src/: main.rs
mistral/: Cargo.toml  README.md
mistral/src/: main.rs
mixtral/: Cargo.toml  README.md
mixtral/src/: main.rs
mnist-training/: Cargo.toml  README.md
mnist-training/src/: main.rs
mobileclip/: Cargo.toml  README.md
mobileclip/src/: main.rs
mobilenetv4/: Cargo.toml  README.md
mobilenetv4/src/: main.rs
mobileone/: Cargo.toml  README.md
mobileone/src/: main.rs
modernbert/: Cargo.toml  README.md
modernbert/src/: main.rs
moondream/: Cargo.toml  README.md
moondream/src/: main.rs
musicgen/: Cargo.toml  README.md
musicgen/src/: main.rs  musicgen_model.rs
nvembed_v2/: Cargo.toml  README.md
nvembed_v2/src/: main.rs
onnx/: Cargo.toml  README.md
onnx-llm/: Cargo.toml  README.md
onnx-llm/src/: main.rs
onnx-runtime-rfdetr/: .gitignore  Cargo.toml  Justfile  README.md  pyproject.toml
onnx-runtime-rfdetr/py/: 01-inference-pretrained.py  02-download-dataset.py  03-finetune.py  04-evaluate.py  05-inference-finetuned.py  06-export-onnx.py
onnx-runtime-rfdetr/src/: gui.rs  lib.rs
onnx/src/: main.rs
orpheus/: Cargo.toml  README.md
orpheus/src/: main.rs
segformer/: Cargo.toml  README.md
segformer/assets/: labels.json
segformer/src/: main.rs
web-serving/: Cargo.toml  Justfile  README.md
web-serving/src/: config.rs  llm.rs  main.rs
yolo-v8-inference/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
yolo-v8-inference/src/: main.rs  model.rs
