[package]
name = "based"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }
candle-examples = { version = "0.9.1", default-features = false }
clap = { version = "4.5.48", features = ["derive"] }
hf-hub = "0.4.3"
serde_json = "1.0.145"
tokenizers = { version = "0.21.4" }

[features]
# Keep default empty so you control backends explicitly.
default = []