[package]
name = "beit"
version = "0.1.0"
edition = "2024"

[dependencies]
accelerate-src = "0.3.2"
anyhow = { version = "1.0.100", features = ["backtrace"] }
bindgen_cuda = { version = "0.1.5" }
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }
candle-examples = { version = "0.9.1", default-features = false }
clap = { version = "4.5.48", features = ["derive"] }
hf-hub = "0.4.3"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }

[features]
# Keep default empty so you control backends explicitly.
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
