[package]
name = "candle-chatglm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }
candle-examples = { version = "0.9.1", default-features = false }
clap = { version = "4.5.45", features = ["derive"] }
hf-hub = { version = "0.4.3" }
tokenizers = { version = "0.21.4"}

[features]
# Keep default empty so you control backends explicitly.
default = []