[package]
name = "candle-depth_anything_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }
candle-examples = { version = "0.9.1", default-features = false }
clap = { version = "4.5.50", features = ["derive"] }
palette = { version = "0.7.6" }
enterpolation = { version = "0.2.1" }
hf-hub = { version = "0.4.3" }

[features]
# Keep default empty so you control backends explicitly.
default = []
# Forward the local 'metal' feature to the dependencies' 'metal' features.
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]