[package]
name = "candle-llama2-c"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = { version = "0.9.2-alpha.2", default-features = false }
candle-nn = { version = "0.9.2-alpha.2", default-features = false }
candle-transformers = { version = "0.9.2-alpha.2", default-features = false }
candle-examples = { version = "0.9.2-alpha.2", default-features = false }
candle-datasets = { version = "0.9.2-alpha.2", default-features = false }
clap = { version = "4.5.54", features = ["derive"] }
hf-hub = "0.4.3"
tokenizers = { version = "0.21.4", features = ["onig"] }
serde_json = "1.0.149"
byteorder = "1.5.0"

[features]
# Keep default empty so you control backends explicitly.
default = []
# Forward the local 'metal' feature to the dependencies' 'metal' features.
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
