[package]
name = "candle-mamba"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
candle-core = { version = "0.9.2-alpha.2", default-features = false }
candle-nn = { version = "0.9.2-alpha.2", default-features = false }
candle-transformers = { version = "0.9.2-alpha.2", default-features = false }
candle-examples = { version = "0.9.2-alpha.2", default-features = false }
clap = { version = "4.5.54", features = ["derive"] }
hf-hub = "0.4.3"
serde_json = "1.0.149"
tokenizers = { version = "0.21.4", features = ["onig"] }

[features]
# Keep default empty so you control backends explicitly.
default = []
# Forward the local 'metal' feature to the dependencies' 'metal' features.
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]