[package]
name = "candle-mobileone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = { version = "0.9.2", default-features = false }
candle-nn = { version = "0.9.2", default-features = false }
candle-transformers = { version = "0.9.2", default-features = false }
candle-examples = { version = "0.9.2", default-features = false }
clap = { version = "4.5.56", features = ["derive"] }
hf-hub = "0.4.3"
accelerate-src = "0.3.2"

[features]
# Keep default empty so you control backends explicitly.
default = []
# Forward the local 'metal' feature to the dependencies' 'metal' features.
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
