[package]
name = "candle-onnx-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version ="1.0.100" }
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }
candle-examples = { version = "0.9.1", default-features = false }
clap = { version = "4.5.48", features = ["derive"] }
hf-hub = { version = "0.4.3" }
tokenizers = { version = "0.21.4", features = ["onig"] }
serde_json = { version = "1.0.145" }
candle-onnx = { version = "0.9.1" }
serde = { version = "1.0.228", features = ["derive"] }

[features]
# Keep default empty so you control backends explicitly.
default = []
# Forward the local 'metal' feature to the dependencies' 'metal' features.
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]